Thu Dec 10 19:40:19 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/On_Inconsistent_Topic/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/PSLSampleLost/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/Reader/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/SetConnectorAttributes/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/State_Connection_Test/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/UnkeyedSamples/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/UnkeyedWriter/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/Updater/descriptors/run_test.pl:
          Resolved fuzz errors/warnings.

Thu Dec 10 19:31:15 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/examples/Hello/descriptors/run_1_to_5.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_5_to_1.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_5_to_5.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_receiver.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_sender.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_test.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_test_dds.pl:
        * docs/tutorials/Quoter/Simple/descriptors/runNodeDaemons.pl:
          Resolved fuzz errors/warnings.

Thu Dec 10 19:26:16 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Servants/Home_Servant_Impl_T.cpp:
          Check return value sprintf and use is_nil

Thu Dec 10 19:15:15 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/CSLDeadline/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/CSLQoS/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/CSLSampleRejected/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/CSLUnexpStat/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/Event_Connection_Test/descriptors/run_test.pl: